<package>
  <name>rviz_plugins_larics</name>
  <version>0.8.4</version>
  <description>
     Additional visualization plugins for RViz.
  </description>
  <maintainer email="damjan.miklic@fer.hr">Damjan Miklic</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugins_larics</url>
  <author>Damjan Miklic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
